<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_action_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/ic_action_add"
        android:title="@string/title_add" />
    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_action_map"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_action_setting"
        android:title="@string/title_setting" />

</menu>